improvement(table): add panel class to support custom

--- a/src/components/table/index.scss
+++ b/src/components/table/index.scss
@@ -47,4 +47,10 @@
       padding: 0 8px;
     }
   }
+
+  .crco-table-panel{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
 }
